// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<section
  data-cy="test-hero"
  style={
    Object {
      "alignContent": "center",
      "columnGap": "2rem",
      "display": "grid",
      "gridTemplateColumns": "3fr 5fr",
      "minHeight": "35rem",
      "padding": "0 5rem",
    }
  }
>
  <div
    style={
      Object {
        "alignSelf": "end",
        "gridArea": "1 / 1 / 1 / 1",
      }
    }
  >
    <p
      style={
        Object {
          "textTransform": "uppercase",
        }
      }
    >
      Instrument
    </p>
    <h1
      style={
        Object {
          "marginBottom": "0",
        }
      }
    >
      2D-C/P
    </h1>
    <p
      style={
        Object {
          "fontSize": "x-large",
        }
      }
    >
      2D-C/P Hydrometeor Imaging Probe
    </p>
  </div>
  <div
    style={
      Object {
        "alignSelf": "start",
        "gridArea": "2 / 1 / 2 / 1",
      }
    }
  >
    <p>
      The 2DC probe records images of hydrometeors...
    </p>
  </div>
  <div
    style={
      Object {
        "gridArea": "1 / 2 / 3 / 3",
      }
    }
  >
    <div>
      children
    </div>
  </div>
</section>
`;

exports[`Header renders with adjust ratios 1`] = `
<section
  data-cy="undefined-hero"
  style={
    Object {
      "alignContent": "center",
      "columnGap": "2rem",
      "display": "grid",
      "gridTemplateColumns": "5fr 3fr",
      "minHeight": "35rem",
      "padding": "0 5rem",
    }
  }
>
  <div
    style={
      Object {
        "alignSelf": "end",
        "gridArea": "1 / 1 / 1 / 1",
      }
    }
  >
    <p
      style={
        Object {
          "textTransform": "uppercase",
        }
      }
    >
      Instrument
    </p>
    <h1
      style={
        Object {
          "marginBottom": "0",
        }
      }
    >
      2D-C/P
    </h1>
    <p
      style={
        Object {
          "fontSize": "x-large",
        }
      }
    >
      2D-C/P Hydrometeor Imaging Probe
    </p>
  </div>
  <div
    style={
      Object {
        "alignSelf": "start",
        "gridArea": "2 / 1 / 2 / 1",
      }
    }
  >
    <p>
      The 2DC probe records images of hydrometeors...
    </p>
  </div>
  <div
    style={
      Object {
        "gridArea": "1 / 2 / 3 / 3",
      }
    }
  >
    <div>
      children
    </div>
  </div>
</section>
`;
